Home screen, Blog and Post view

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@theme{
+
+    --color-sage: #b0d0d3;
+    --color-mauve: #c08497;
+    --color-coral: #f7af9d;
+    --color-cream: #f3eec3;
+    --color-primary: #3d405b;
+    --color-accent: #f2cc8f;
+}
+
